--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -9,7 +9,9 @@ jobs:
       - uses: actions/checkout@v2
 #      - uses: psf/black@stable
       - uses: browniebroke/pre-commit-autoupdate-action@main
-      - uses: peter-evans/create-pull-request@v3
+      - name: commit
+        if: always()
+        uses: peter-evans/create-pull-request@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: update/pre-commit-hooks
