--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -18,3 +18,4 @@ jobs:
           title: Update pre-commit hooks
           commit-message: "chore: update pre-commit hooks"
           body: Update versions of pre-commit hooks to latest version.
+          base: ${{ github.head_ref }}
