--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,5 +49,5 @@ jobs:
 
       # Run tests from /tests directory
       - name: Run tests
-        run: |
-          pytest
+        run:
+           pytest
