--- a/.gitignore
+++ b/.gitignore
@@ -1,77 +1,125 @@
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+# Editors
+.vscode/
+.idea/
 
-# User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
+# Vagrant
+.vagrant/
 
-# AWS User-specific
-.idea/**/aws.xml
+# Mac/OSX
+.DS_Store
 
-# Generated files
-.idea/**/contentModel.xml
+# Windows
+Thumbs.db
 
-# Sensitive or high-churn files
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
-.idea/**/dbnavigator.xml
+# Source for the following rules: https://raw.githubusercontent.com/github/gitignore/master/Python.gitignore
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
 
-# Gradle
-.idea/**/gradle.xml
-.idea/**/libraries
+# C extensions
+*.so
 
-# Gradle and Maven with auto-import
-# When using Gradle or Maven with auto-import, you should exclude module files,
-# since they will be recreated, and may cause churn.  Uncomment if using
-# auto-import.
-# .idea/artifacts
-# .idea/compiler.xml
-# .idea/jarRepositories.xml
-# .idea/modules.xml
-# .idea/*.iml
-# .idea/modules
-# *.iml
-# *.ipr
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
-# CMake
-cmake-build-*/
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
 
-# Mongo Explorer plugin
-.idea/**/mongoSettings.xml
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
 
-# File-based project format
-*.iws
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
 
-# IntelliJ
-out/
+# Translations
+*.mo
+*.pot
 
-# mpeltonen/sbt-idea plugin
-.idea_modules/
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
 
-# JIRA plugin
-atlassian-ide-plugin.xml
+# Flask stuff:
+instance/
+.webassets-cache
 
-# Cursive Clojure plugin
-.idea/replstate.xml
+# Scrapy stuff:
+.scrapy
 
-# SonarLint plugin
-.idea/sonarlint/
+# Sphinx documentation
+docs/_build/
 
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
+# PyBuilder
+target/
 
-# Editor-based Rest Client
-.idea/httpRequests
+# Jupyter Notebook
+.ipynb_checkpoints
 
-# Android studio 3.1+ serialized cache file
-.idea/caches/build_file_checksums.ser
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# celery beat schedule file
+celerybeat-schedule
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
