--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -13,6 +13,7 @@ jobs:
         uses: peter-evans/create-pull-request@v3
         with:
           token: ${{ secrets.ACTIONS_TOKEN}}
+          args: ". --check --verbose --exclude README.md"
           branch: branch_to_fix_black
           title: Fixing black
           commit-message: "chore: fixing black"
